background image added

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body{
+    background-image: url(/images/background.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 #mainNavbar{
     top: 330px;
     position: fixed;
