profile picture added

--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,17 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-#mainNavbar{
-    top: 330px;
-    position: fixed;
-}
+
 #mainNavbar ul li a{
     color: #BEA96A;
     font-size: 36px;
+
 }
 .col-xs-3{
     background-color: #320F0D;
+}
+#profile{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
